# open-relay

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
apps/admin/: index.html  package.json
apps/admin/src/: App.tsx  api.ts  main.tsx
apps/admin/src/app/: RootGate.tsx  router.tsx
apps/admin/src/components/roles/: RoleMultiSelect.tsx
apps/admin/src/components/users/: UserSelect.tsx
apps/admin/src/lib/api/: client.ts  errors.ts  tokenSource.ts
apps/admin/src/lib/auth/: AuthContext.tsx  AuthProvider.tsx  RequirePermission.tsx  storage.ts  usePermissions.ts
apps/admin/src/lib/backends/: useBackendMutations.ts  useBackends.ts
apps/admin/src/lib/dashboard/: useDashboard.ts
apps/admin/src/lib/forms/: standardFields.ts  useFormMutations.ts  useForms.ts
apps/admin/src/lib/oauth/: useOAuth.ts
apps/admin/src/lib/permissions/: usePermissionCatalog.ts
apps/admin/src/lib/reps/: useRepMutations.ts  useReps.ts
apps/admin/src/lib/roles/: useRoleMutations.ts  useRoles.ts
apps/admin/src/lib/setup/: useSetupStatus.ts
apps/admin/src/lib/submissions/: useSubmissionMutations.ts  useSubmissions.ts
apps/admin/src/lib/theme/: ThemeProvider.tsx  ThemeToggle.tsx  theme.ts
apps/admin/src/lib/users/: useUserMutations.ts  useUsers.ts
apps/admin/src/pages/: LoginPage.tsx  NotFoundPage.tsx  OAuthCallbackPage.tsx  SetupPage.tsx
apps/admin/src/pages/admin/: AdminShell.tsx  DashboardPage.tsx  Sidebar.tsx  Topbar.tsx
apps/admin/src/pages/admin/backends/: BackendFormDialog.tsx  BackendsPage.tsx
apps/admin/src/pages/admin/forms/: CustomFieldsEditor.tsx  FormFormDialog.tsx  FormPreviewPage.tsx  FormsPage.tsx  StandardFieldsList.tsx
apps/admin/src/pages/admin/profile/: ProfilePage.tsx
apps/admin/src/pages/admin/reps/: RepFormDialog.tsx  RepsPage.tsx
apps/admin/src/pages/admin/roles/: RoleFormDialog.tsx  RolesPage.tsx
apps/admin/src/pages/admin/settings/: AuthSettingsPage.tsx
apps/admin/src/pages/admin/submissions/: DeliveryStatusBadges.tsx  SubmissionDetailDialog.tsx  SubmissionsPage.tsx
apps/admin/src/pages/admin/users/: ChangePasswordDialog.tsx  UserFormDialog.tsx  UsersPage.tsx
apps/admin/src/styles/: globals.css
apps/embed-sdk/: package.json  vite.config.ts
apps/embed-sdk/src/: index.ts  mount.tsx  styles.css
apps/server/: Cargo.toml
apps/server/src/: config.rs  error.rs  main.rs  ratelimit.rs  router.rs  state.rs
apps/server/src/auth/: local.rs  me.rs  mod.rs  permissions.rs  provider.rs  refresh.rs
apps/server/src/auth/oauth/: config.rs  flow.rs  identities.rs  mod.rs
apps/server/src/jobs/: mod.rs
apps/server/src/routes/: backends.rs  dashboard.rs  forms.rs  health.rs  mod.rs  public_forms.rs  reps.rs  roles.rs  setup.rs  submissions.rs  users.rs
apps/server/src/users/: dto.rs  mod.rs  service.rs
crates/core/: Cargo.toml
crates/core/src/: crypto.rs  error.rs  lib.rs  permissions.rs
crates/core/src/auth/: mod.rs  provider.rs  refresh.rs
crates/core/src/backend/: gohighlevel.rs  mod.rs  openrelay.rs  registry.rs
crates/core/src/backends/: mod.rs  service.rs
crates/core/src/dashboard/: mod.rs  service.rs
crates/core/src/external_identity/: mod.rs  service.rs
crates/core/src/forms/: mod.rs  service.rs
crates/core/src/jobs/: worker.rs
crates/core/src/metadata/: mod.rs  service.rs
crates/core/src/oauth/: discovery.rs  idtoken.rs  mod.rs  oidc.rs  ssrf.rs  state.rs
crates/core/src/oauth_config/: mod.rs  service.rs
crates/core/src/rbac/: mod.rs  service.rs
crates/core/src/reps/: mod.rs  service.rs
crates/core/src/setup/: mod.rs
crates/core/src/submissions/: mod.rs  service.rs
crates/core/src/users/: mod.rs  service.rs
crates/entity/: Cargo.toml
crates/entity/src/: backend_instance.rs  external_identity.rs  form.rs  form_metadata.rs  lib.rs  oauth_provider_config.rs  refresh_token.rs  role.rs  role_permission.rs  sales_rep.rs  submission.rs  submission_delivery.rs  user.rs  user_role.rs
infra/: docker-compose.yml
