[workspace]
resolver = "3"
members = ["apps/server", "crates/entity", "crates/core"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/openrelay/open-relay"

[workspace.dependencies]
# Internal
entity = { path = "crates/entity" }
open-relay-core = { path = "crates/core" }

# Async / web
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "set-header", "limit", "fs"] }

# Data
sea-orm = { version = "=2.0.0-rc.38", default-features = false, features = [
    "macros",
    "with-json",
    "with-chrono",
    "with-uuid",
    "runtime-tokio-rustls",
    "sqlx-mysql",
    "schema-sync",
    "entity-registry",
] }

# OpenAPI
# `utoipa` itself is framework-agnostic and lives in core for DTO derives.
# `utoipa-axum` (router glue) + `utoipa-swagger-ui` w/ `axum` feature stay
# server-only — they're the Axum-coupled pieces of the stack.
utoipa = { version = "5", features = ["chrono"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# Auth
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
oauth2 = { version = "5", default-features = false, features = ["reqwest", "rustls-tls"] }
argon2 = "0.5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
cookie = "0.18"
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
rand = "0.9"

# Secrets at rest (AEAD)
chacha20poly1305 = "0.10"
zeroize = { version = "1", features = ["derive"] }

# Rate limiting
tower_governor = "0.7"
governor = "0.8"

# Serde / errors
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config
figment = { version = "0.10", features = ["env", "toml"] }
dotenvy = "0.15"

# Misc
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
strum = { version = "0.27", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
