[package]
name = "open-relay-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "open-relay-server"
path = "src/main.rs"

[dependencies]
# Internal
entity = { workspace = true }
open-relay-core = { workspace = true }

# Async / web
axum = { workspace = true }
tokio = { workspace = true }
# `util` gives us `service_fn` + `ServiceExt::oneshot`, used to build the admin
# SPA fallback (serve a real file, else the SPA shell with a 200).
tower = { workspace = true, features = ["util"] }
tower-http = { workspace = true }

# Data
sea-orm = { workspace = true }

# OpenAPI
utoipa = { workspace = true }
utoipa-axum = { workspace = true }
utoipa-swagger-ui = { workspace = true }

# Serde / errors
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# Observability
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Config
figment = { workspace = true }
dotenvy = { workspace = true }

# Misc
async-trait = { workspace = true }
cookie = { workspace = true }
base64 = { workspace = true }
tower_governor = { workspace = true }
governor = { workspace = true }
