[package]
name = "open-relay-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
entity = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
argon2 = { workspace = true }
jsonwebtoken = { workspace = true }
oauth2 = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
strum = { workspace = true }
utoipa = { workspace = true }
